Address issue where nav was incorrect size on mobile

--- a/redesign/css/cyclescape.css
+++ b/redesign/css/cyclescape.css
@@ -63,7 +63,7 @@ body {display: flex; flex-direction: row; flex-wrap: wrap; width: 100%; padding:
 
 
 /* Nav */
-nav {position: fixed; display: flex; flex-direction: column; flex-basis: 100%; flex: 1; background-color: #eeeeee; height: calc(100vh - 20px); max-width: 260px; border-radius: 25px; box-shadow: 2px 6px 12px -7px rgba(0,0,0,0.75); z-index: 103; min-height: 600px; overflow-y: scroll;}
+nav {position: fixed; display: flex; flex-direction: column; background-color: #eeeeee; height: calc(100vh - 20px); max-width: 260px; border-radius: 25px; box-shadow: 2px 6px 12px -7px rgba(0,0,0,0.75); z-index: 103; min-height: 469px; overflow-y: scroll;}
 nav hr {color: white; margin: 12.5px 0 12.5px -10px; height: 2px !important; opacity: .6; width: calc(100% + 20px);}
 nav .title img {width: 30px; margin-top: -16px;}
 nav .title h1 {display: inline; font-style: italic; font-size: 35px;}
@@ -76,7 +76,7 @@ nav li.active {background-color: #FFFFFF; box-shadow: 0 3px 8px 0 rgba(0,0,0,0.1
 nav li:hover {background-color: #ffffffa6;}
 nav select {appearance: none; -webkit-appearance: none; outline: 0; border: none; background-color: #eeeeee; color: #185B3D; font-size: 17px; cursor: pointer; width: 190px; padding: 10px 5px; margin: 2.5px 0; border-radius: 25px;}
 nav select:hover {background-color: #ffffffa6;}
-nav .padding-fill {height: 20%;}
+nav .padding.bottom {margin-top: auto;}
 button#hamburger {display: none; position: fixed; padding: 10px; margin: 0 5px; border-radius: 100%; color: #AC3E27; font-size: 150%; width: 50px; height: 50px; border: none; outline: none; background-color: #FFFFFF; box-shadow: 0 3px 8px 0 rgba(0,0,0,0.12), 0 3px 1px 0 rgba(0,0,0,0.04); transition: 0.2s; line-height: 1; z-index: 98;}
 button#hamburger:hover {background-color: #eeeeee;}
 
@@ -415,6 +415,7 @@ ul.thread #post:hover {background: #f0eeee;}
 .new-idea form {overflow: scroll;}
 .new-idea .main-content.full-screen.full-map {height: calc(100vh - 190px);}
 .modal-content .modal-body button.done {position: relative; display: block; margin: 30px 10px 0;}
+.new-idea #map {height: -webkit-fill-available;}
 
 
 /* Library */
@@ -676,8 +677,7 @@ ul.application-types li label {color: white;}
 }
 
 @media (max-height: 666px) {
-    nav {overflow-x: hidden; overflow-y: scroll;}
-    nav .padding {padding: 2.5px 5px;}
+    nav .padding {padding: 5px;}
     nav hr {margin: 5px 0 5px -10px;}
     nav li {font-size: 15px; padding: 7.5px 5px;}
     div.search input {font-size: 19px; line-height: 30px;}
@@ -692,9 +692,4 @@ ul.application-types li label {color: white;}
     div.geocoder input {width: 270px;}
     ul.discussions div.minimap {display: none;}
     .side-content {width: 100vw;}
-}
-
-@media (max-height: 600px) {
-    nav .padding-fill {display: none;}
-    nav {min-height: 470px;}
 }
